welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:73: error: expected start of definition
	override def forward(i:Int)  { 
                 ^ZigZag:76: error: expected start of definition
	override def forward()  {
                 ^ZigZag:79: error: expected start of definition
	override def backward(i:Int) {
                 ^ZigZag:82: error: expected start of definition
	override def backward() {
                 ^ZigZag:85: error: Unmatched closing brace '}' ignored here
}
^